# swng

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt
src/: main.cpp  misc.cpp  misc.h
tests/: tests.cpp
